--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,12 @@ dependencies {
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version:'2.1.0'
 }
 
+jar {
+	manifest {
+		attributes 'ApiRestApplication': 'com.example.demo.ApiRestApplication' // Reemplaza 'tu.paquete.MainClass' con la clase principal de tu aplicación
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
